@@ -1,7 +1,7 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2005-2005 Gentoo Technologies, Inc.
 
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.582 2006/01/23 00:56:58 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.583 2006/01/23 01:26:58 agaffney Exp $
 
 *GLI-0.3 (27 Oct 2005)
 
@@ -10,6 +10,8 @@
   initial support for 'include' in XML files
   src/GLIStorageDevice.py:
   initial support for %
+  src/GLIClientController.py:
+  add debugging statements to pre-install steps
 
   15 Jan 2006; Preston Cody <codeman@gentoo.org>
   webgli/configfiles:
